k8s/metadata-ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: metadata
  labels:
    name: metadata
