k8s/celery-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: metadata
  labels:
    nameLabel: celery-worker
  name: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      nameLabel: celery-worker
  strategy: {}
  template:
    metadata:
      labels:
        nameLabel: celery-worker
    spec:
      containers:
        - image: watermodelling/metadata-service:latest
          name: celery-worker
          args:
            - celery
            - -A
            - tasks.celery
            - worker
            - --loglevel=info
            - --uid
            - celery
          resources: {}
      hostname: celery-worker
      restartPolicy: Always
status: {}
