k8s/metadata-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: metadata
  labels:
    nameLabel: metadata-svc
  name: metadata-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      nameLabel: metadata-svc
  strategy: {}
  template:
    metadata:
      labels:
        nameLabel: metadata-svc
    spec:
      containers:
        - image: watermodelling/metadata-service:latest
          name: metadata-svc
          ports:
            - containerPort: 5001
          resources: {}
      hostname: metadata-svc
      restartPolicy: Always
status: {}
