k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: metadata
  labels:
    nameLabel: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      nameLabel: redis
  strategy: {}
  template:
    metadata:
      labels:
        nameLabel: redis
    spec:
      containers:
        - image: redis:alpine
          name: redis
          ports:
            - containerPort: 6379
          resources: {}
      hostname: redis
      restartPolicy: Always
status: {}
