k8s/celery-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: metadata
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: celery-worker
  name: celery-worker
spec:
  ports:
    - name: "5555"
      port: 5555
      targetPort: 5555
  selector:
    io.kompose.service: celery-worker
status:
  loadBalancer: {}
