k8s/metadata-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: metadata
  labels:
    nameLabel: metadata-svc
  name: metadata-svc
spec:
  ports:
    - name: "metadata-api"
      port: 8080
  selector:
    nameLabel: metadata-svc
status:
  loadBalancer: {}
