k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: metadata
  labels:
    nameLabel: redis
  name: redis
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    nameLabel: redis
status:
  loadBalancer: {}
