k8s/metadata-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: metadata-service-ingress
    namespace: metadata
  spec:
    ingressClassName: nginx
    rules:
    - host: 149.156.182.201.nip.io
      http:
        paths:
        - backend:
            service:
              name: metadata-svc
              port:
                name: metadata-api
          path: /metadata
          pathType: ImplementationSpecific
kind: List
